-- Map services to return Response objects -- add global exception handler -- add a new endpoint to search availability for period of time -- add tests to cover the new endpoint